--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
    <p>I am passionate about website development and programming, and have honed my skills through personal projects and hobbies. I would be grateful for any opportunities to apply these skills in a professional setting, and I am confident that my dedication and expertise would be an asset to any team. Thank you for considering my skills and experience.</p>
 
    <hr>
+    <h2>Others:</h2>
+    <p>  <a href="./hobbies.html">Hobbies </a></p>
+    <p>  <a href="./contact.html">Contact </a></p>
+  
+    
+   <hr>
 
    <footer>
     <p>© Jhon Michael G. Delima</p>
